eserde/tests/compile_fail/unsupported_serde_default.stderr
error: `eserde::Deserialize` doesn't yet support the `#[serde(default = "..")]` attribute. It only supports `#[serde(default)]`, which defers to the `Default` trait to generate the default value.
 --> tests/compile_fail/unsupported_serde_default.rs:3:31
  |
3 |     #[serde(rename = "route", default = "default_route")]
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `eserde::Deserialize` doesn't yet support the `#[serde(default = "..")]` attribute. It only supports `#[serde(default)]`, which defers to the `Default` trait to generate the default value.
 --> tests/compile_fail/unsupported_serde_default.rs:5:13
  |
5 |     #[serde(default = "default_route")]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^
